--- a/src/public/css/form.css
+++ b/src/public/css/form.css
@@ -25,7 +25,7 @@ h1 {
 
 label {
     display: inline-block;
-    width: 20%;
+    width: 30%;
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -75,6 +75,7 @@ button {
     background-color: #7b6652;
     color: #fff;
     border: none;
-    padding: 10px 40px;
+    padding: 15px 30px;
     cursor: pointer;
+    font-size: 1rem;
 }
