--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
 }
+h1 {
+    text-align: center;
+}
 
 .login-container {
     width: 420px;
@@ -15,10 +18,10 @@ body {
 }
 
 .page-title {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    font-weight: bold;
     color: #333;
+    margin: 0 0 30px 0;
 }
 
 .form-group {
@@ -47,7 +50,7 @@ input {
 }
 
 input:focus {
-    border-color: #007bff;
+    border-color: #7b6652;
     outline: none;
 }
 
@@ -57,7 +60,7 @@ input:focus {
 }
 
 .btn-login {
-    background-color: #007bff;
+    background-color: #7b6652;
     color: white;
     padding: 10px 25px;
     border: none;
@@ -68,19 +71,7 @@ input:focus {
 }
 
 .btn-login:hover {
-    background-color: #0056b3;
-}
-
-.btn-link {
-    display: block;
-    margin-top: 15px;
-    color: #007bff;
-    text-decoration: none;
-    font-size: 0.95rem;
-}
-
-.btn-link:hover {
-    text-decoration: underline;
+    background-color: #7b6652;
 }
 
 .error {
