--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -47,7 +47,7 @@ input {
 }
 
 input:focus {
-    border-color: #007bff;
+    border-color: #7b6652;
     outline: none;
 }
 
@@ -57,30 +57,18 @@ input:focus {
 }
 
 .btn-register {
-    background-color: #007bff;
+    background-color: #7b6652;
     color: white;
     padding: 10px 25px;
     border: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1rem;
-    transition: background 0.3s;
+    transition: 0.3s;
 }
 
 .btn-register:hover {
-    background-color: #0056b3;
-}
-
-.btn-link {
-    display: block;
-    margin-top: 15px;
-    color: #007bff;
-    text-decoration: none;
-    font-size: 0.95rem;
-}
-
-.btn-link:hover {
-    text-decoration: underline;
+    background-color: #7b6652;
 }
 
 .error {
